--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="title">
             <h1>Projeto</h1>
              <div class="subtitle">
-               <span >Diagnóstico de nódulos pulmonares com o uso de Deep Learning </span>
+               <span > FindJobs </span>
             </div>
           </div>
         </section>
@@ -117,6 +117,15 @@
                 </div>
               </td>
 
+              <td>
+                <div class="panel">
+                  <p><span class="icons">&#xf2b9; </span> João Vítor do Nascimento</p>
+                  <p><span class="icons">&#xf19d; </span>Universidade Federal de Alagoas</p>
+                  <p><span class="icons">&#xf0e0; </span>vitornascimentto0@gmail.com</p>
+                  <p><span class="icons">&#xf09b; </span> <a href="https://github.com/vitornascimentto"> vitornascimentto</a></p>
+                </div>
+              </td>
+
             </tr>
           </table>
 
@@ -130,9 +139,9 @@
           
           <section>
             <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Identificação da região nodular</h1>
+              <h1 class="title-blockquote"> Motivo </h1>
               <div class="blockquote">
-                </p>Buscamos identificar possíveis regiões com nódulos no pulmão com a aplicação de técnicas de Processamento de Imagem em conjunto com algoritimos de Deep Learning.</p>
+                </p> Buscamos facilitar a vida de quem está a procura de um emprego, sem a necessidade do usuário sair da comodidade de seu lar. </p>
               </div>
             </div>
           </section>
@@ -147,23 +156,16 @@
           <section>
 
             <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Python</h1>
+              <h1 class="title-blockquote"> Angular </h1>
               <div class="blockquote">
-                </p>Foi escolhido Python como linguagem de desenvolvimento devido a todo suporte oferecido por ela nos trabalhos feitos dentro de Machine Learning.</p>
+                </p>Foi escolhido o Angular como framework de desenvolvimento devido a todo suporte oferecido por ela nos projetos feitos de desenvolvimento web.</p>
               </div>
             </div>
 
             <div class="box-blockquote fragment fade-up">
-                <h1 class="title-blockquote">Tensorflow + Keras</h1>
+                <h1 class="title-blockquote"> Firebase </h1>
                 <div class="blockquote">
-                  </p>Utilizamos essas libraries por todo suporte oferecido na estruturação de redes neurais, bem como a possibilidade de acompanhamento de todo o processo em um trainamento por meios de log's.</p>
-                </div>
-             </div>
-
-             <div class="box-blockquote fragment fade-up">
-                <h1 class="title-blockquote">scikit-image</h1>
-                <div class="blockquote">
-                  </p>Essa library é de grande valia para ser utilizada em conjunto com técnicas de processamento de imagem na linguagem Python.</p>
+                  </p> Utilizamos o Firebase como framework devido ao tema do Hackathon. </p>
                 </div>
              </div>
           </section>
@@ -172,187 +174,16 @@
         <!-- aproacches and failures -->
         <section>
           <section>
-            <h2 class="title-slide">Abordagens</h2>
-          </section>
-
-          <section>
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">U-Net</h1>
-              <div class="blockquote">
-                <p>Tentamos uma abordagem com a <a href="https://arxiv.org/abs/1505.04597">U-Net</a>, porém ela tem uma estrutura desenvolvida para segmentação. Sendo assim não compatível com o nosso objetivo, que é encontrar a região de um possível nódulo na imagem.</p>
-              </div>
-              <figure style="text-align: center;">
-                <img class="style-image" src="./images/u-net.png" alt="U-Net" width="450">
-              </figure>
-            </div>
-          </section>
-
-          <section>
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">CNN</h1>
-              <div class="blockquote">
-                <p>Utilizamos a <a href="https://skymind.ai/wiki/convolutional-network">CNN</a> e percebemos uma acurácia semelhante da que obtivemos com a U-Net, porém com um custo computacional menor devido a sua estrutura.</p>
-              </div>
-              <figure style="text-align: center;">
-                <img class="style-image" src="./images/cnn.png" alt="CNN" width="600">
-              </figure>
-            </div>
-          </section>
-
-          <section>
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Passando a imagem inteira para a rede</h1>
-              <div class="blockquote">
-                <p>Nossa primeira tentativa tanto na Unet como na CNN foi passar a imagem inteira para a rede neural como entrada.</p>
-              </div>
-              <figure style="text-align: center;">
-                <img class="style-image" src="./images/original.png" alt="Lung image" width="350">
-              </figure>
-            </div>
-          </section>
-
-          <section>
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Usar máscara binária como label</h1>
-              <div class="blockquote">
-                <p>
-                  Criado uma máscara a partir da imagem segmentada para servir como label para a rede neural.
-                </p>
-              </div>
-              <figure style="text-align: center;">
-                <img class="style-image" src="./images/image_landmark.png" alt="Lung image" width="300" height="300" >
-                <img class="style-image" src="./images/mask.png" alt="Lung image" width="300" height="300">
-              </figure>
-            </div>
-          </section>
-
-          <section>
-            <h2 class="title-slide">E falhas...</h2>
-          </section>
-
-          <section>
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Desbalanceamento</h1>
-              <div class="blockquote">
-                <p>Maior quantidade de informações ficou concentrada nas regiões externas da imagem (escuras), tendo um desbalanceamento na distribuição de informações da imagem;</p>
-              </div>
-            </div>
-
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Overfitting</h1>
-              <div class="blockquote">
-                <p>Devido ao desbalanceamento das imagens a rede acabou aprendendo muito sobre as informações de treino e ganhando deficiência na predição em outras imagens</p>
-              </div>
-            </div>
-          </section>
-
-          <!-- table -->
-          <section>
-            <div class="box-blockquote fragment fade-up">
-              <h1 style="text-align: center; margin-bottom: 100px;" class="title-blockquote">Configurações da rede no treinamento</h1>
-              <table class="table">
-                <thead> 
-                  <tr>
-                    <th>Epochs</th>
-                    <th>Batch Size</th>
-                    <th>Learning Rate</th>
-                    <th>Feedback</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>10</td>
-                    <td>3</td>
-                    <td>1e-4</td>
-                    <td>Com coordenadas únicas, se saiu mal</td>
-                  </tr>
-                  <tr>
-                    <td>10</td>
-                    <td>3</td>
-                    <td>1e-4</td>
-                    <td>Sem coordenadas únicas, se saiu mal</td>
-                  </tr>
-                  <tr>
-                    <td>10</td>
-                    <td>3</td>
-                    <td>1e-4</td>
-                    <td>Sem coordenadas únicas, se saiu mal</td>
-                  </tr>
-                  <tr>
-                    <td>10</td>
-                    <td>2</td>
-                    <td>1e-4</td>
-                    <td>Sem coordenadas únicas, se saiu mal</td>
-                  </tr>
-                  <tr>
-                    <td>10</td>
-                    <td>2</td>
-                    <td>1e-5</td>
-                    <td>Sem coordenadas únicas, se saiu mal</td>
-                  </tr>
-                  <tr>
-                    <td>10</td>
-                    <td>2</td>
-                    <td>1e-6</td>
-                    <td>Sem coordenadas únicas, demonstrou um leve sinal de aprendizado</td>
-                  </tr>
-                  <tr>
-                    <td>10</td>
-                    <td>1</td>
-                    <td>1e-4</td>
-                    <td>Sem coordenadas únicas, resultado insatisfatório</td>
-                  </tr>
-                  <tr>
-                    <td>50</td>
-                    <td>2</td>
-                    <td>1e-6</td>
-                    <td>Sem coordenadas únicas, resultado insatisfatório</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </section>
-        </section>
-
-        <!-- working in progress -->
-        <section>
-          <section>
-            <h2 class="title-slide">Trabalho em progresso</h2>
-          </section>
-          <section>
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Processamento de imagem</h1>
-              <div class="blockquote">
-                <p>Selecionar a região mais próxima do pulmão com o auxílio da library <a href="https://scikit-image.org/">scikit-image</a> com objetivo de diminuir o desbalanceamento.</p>
-              </div>
-            </div>
-
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Ténicas de processamento de imagem</h1>
-              <div class="blockquote blockquote-list">
-                <ul>
-                  <li>Filtro gaussiano;</li>
-                  <li>Detector de arestas;</li>
-                  <li>Detector morfológico;</li>
-                  <li>Regionprop;</li>
-                </ul>
-              </div>
-            </div>
+            <h2 class="title-slide"> Firebase </h2>
             
-          </section>
+            <ul>
+              <li> Firestore </li>
+              <li> Hosting </li>
+              <li> Authentication </li>
+            </ul>
 
-          <section>
-            <div class="box-blockquote fragment fade-up">
-              <h1 class="title-blockquote">Resultado alcançado</h1>
-              <div class="blockquote">
-                <p>Com todas as técnicas aplicadas foi possível detectar as possíveis regiões próximas ao parênquima do pulmão.</p>
-              </div>
-              <figure style="text-align: center;">
-                <img class="style-image" src="./images/step-to-step.png" alt="Step to step" width="600">
-              </figure>
-            </div>
           </section>
-        </section>
+          </section>
 
         <!-- biography  -->
         <!-- <section>
